// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de Citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2022",
      "hora": "10:30",
      "id": 1652630158684,
      "mascota": "Nana",
      "propietario": "Angelica Silva",
      "sintomas": "Solo duerme",
      "telefono": "6585555",
    },
  ],
}
`;

exports[`Probar la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2022",
      "hora": "10:30",
      "id": 1652630158684,
      "mascota": "Bigotes",
      "propietario": "Angelica Silva",
      "sintomas": "Solo duerme",
      "telefono": "6585555",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": Array [],
}
`;
